ES6 modules: Enable by default with a kill switch

This patch enables ES6 modules support by default with a kill switch
that can be managed by about://flags and server providing configurations.

Bug: 736192
Change-Id: I5c244ba0103a95625aefc9b42e9295d03ff8d4a2
Reviewed-on: https://chromium-review.googlesource.com/558727
Reviewed-by: Kent Tamura <tkent@chromium.org>
Reviewed-by: Kouhei Ueno <kouhei@chromium.org>
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Commit-Queue: Takashi Toyoshima <toyoshim@chromium.org>
Cr-Commit-Position: refs/heads/master@{#484063}
Former-commit-id: 08ff97980714bbfb42d9b0d50ac01feabce3e500