chrome/browser/flag_descriptions.cc
@@ -2879,6 +2879,11 @@ const char kMojoLoadingName[] = "Use Mojo IPC for resource loading";
 const char kMojoLoadingDescription[] =
     "Use Mojo IPC instead of traditional Chrome IPC for resource loading.";
 
+const char kModuleScriptsName[] = "Enable ECMAScript 6 modules";
+
+const char kModuleScriptsDescription[] =
+    "Enables ECMAScript 6 modules support in Blink.";
+
 #if defined(OS_ANDROID)
 
 const char kUseNewDoodleApiName[] = "Use new Doodle API";
