content/public/common/content_features.cc
@@ -173,6 +173,10 @@ const base::Feature kMojoBlobs{"MojoBlobs", base::FEATURE_DISABLED_BY_DEFAULT};
 const base::Feature kMojoInputMessages{"MojoInputMessages",
                                        base::FEATURE_DISABLED_BY_DEFAULT};
 
+// ES6 Modules.
+const base::Feature kModuleScripts{"ModuleScripts",
+                                   base::FEATURE_ENABLED_BY_DEFAULT};
+
 // Experimental resource fetch optimizations for workers. See crbug.com/443374
 const base::Feature kOffMainThreadFetch{"OffMainThreadFetch",
                                         base::FEATURE_DISABLED_BY_DEFAULT};
